--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Comigo</title>
     <link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="assets/fonts/icomoon/style.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="shortcut icon" href="assets/icons/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,300i,400,400i,700,700i" rel="stylesheet">
@@ -20,25 +21,25 @@
             <ul class="mm-second list-reset">
               <li><a href="#">EI CLOUD</a>
                 <ul class="mm-third list-reset">
-                  <li><a href="#">EIˣ</a></li>
-                  <li><a href="#">EI MIND</a></li>
+                  <li><a href="#">EIˣ</a></li
+                  ><li><a href="#">EI MIND</a></li>
                 </ul>
-              </li>
-              <li><a href="#">EI MIDDLEWARE</a>
+              </li
+              ><li><a href="#">EI MIDDLEWARE</a>
                 <ul class="mm-third list-reset">
-                  <li><a href="#">ANDROID</a></li>
-                  <li><a href="#">COMIGO WATCHAPP&#8482; APPLICATION</a></li>
+                  <li><a href="#">ANDROID</a></li
+                  ><li><a href="#">COMIGO WATCHAPP&#8482; APPLICATION</a></li>
                 </ul>
-              </li>
-              <li><a href="#">ANDROID STB</a></li>
+              </li
+              ><li><a href="#">ANDROID STB</a></li>
             </ul>
           </li>
           <li><a href="#">Partners</a></li>
           <li><a href="#">Industry Insights</a>
             <ul class="mm-second list-reset">
-              <li><a href="#">MEDIA ROOMS</a></li>
-              <li><a href="#">BLOG</a></li>
-              <li><a href="#">INDUSTRY EVENTS</a></li>
+              <li><a href="#">MEDIA ROOMS</a></li
+              ><li><a href="#">BLOG</a></li
+              ><li><a href="#">INDUSTRY EVENTS</a></li>
             </ul>
           </li>
           <li><a href="#">About</a></li>
@@ -65,53 +66,55 @@
         </div>
       </article>
       <section class="engagement">
-        <h3>ENGAGE VIEWERS, DIFFERENTIATE EXPERIENCE AND DRIVE NEW REVENUE with highly-relevant contextual</h3>
-        <ul class="list-reset">
+          <h3 class="engagement-text">ENGAGE VIEWERS, DIFFERENTIATE EXPERIENCE AND DRIVE NEW REVENUE
+            <span>with highly-relevant contextual services</span>
+          </h3>
+        <ul class="list-reset engagement-list">
           <li>
             <h4>PEDIA</h4>
             <figure>
-              <img src="assets/services/pedia.png" alt="pedia picture" width="344" height="469">
               <figcaption>Drive stickiness by enriching content with contextual data from external sources</figcaption>
+              <img src="assets/services/pedia.png" alt="pedia picture" width="344" height="469">
             </figure>
             <video src="assets/videos/video-soccer_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>PARTICIPATION</h4>
             <figure>
-              <img src="assets/services/participation.png" alt="participation picture" width="486" height="229">
               <figcaption>Engage viewers and increase content spread through data-driven social features</figcaption>
+              <img src="assets/services/participation.png" alt="participation picture" width="486" height="229">
             </figure>
             <video src="assets/videos/video-action-thriller_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>DISCOVERY</h4>
             <figure>
-              <img src="assets/services/discovery.png" alt="discovery picture" width="490" height="387">
               <figcaption>Offer personalised content with contextualised search, menu and recommendations</figcaption>
+              <img src="assets/services/discovery.png" alt="discovery picture" width="490" height="387">
             </figure>
             <video src="assets/videos/video-army-helicopters.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>COMMERCE</h4>
             <figure>
-              <img src="assets/services/commerce.png" alt="commerce picture" width="360" height="421">
               <figcaption>Create new revenue engines through contextual shopping services</figcaption>
+              <img src="assets/services/commerce.png" alt="commerce picture" width="360" height="421">
             </figure>
             <video src="assets/videos/video-city-3d-war_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>ADVERTISING</h4>
             <figure>
-              <img src="assets/services/cars.png" alt="advertising picture" width="445" height="389">
               <figcaption>Offer ultra-targeted measurable advertising with advanced campaign analytics</figcaption>
+              <img src="assets/services/cars.png" alt="advertising picture" width="445" height="389">
             </figure>
             <video src="assets/videos/video-car-drive_2.mp4" autoplay loop></video>
           </li>
           <li>
             <h4>CUSTOMIZE</h4>
             <figure>
-              <img src="assets/services/customize.png" alt="customize picture" width="323" height="364">
               <figcaption>Quickly launch new, unique services based on our open SDK</figcaption>
+              <img src="assets/services/customize.png" alt="customize picture" width="323" height="364">
             </figure>
             <video src="assets/videos/video-kids-on-sofa_2.mp4" autoplay loop></video>
           </li>
@@ -124,8 +127,7 @@
           <a href="#" class="round-btn inverse">ENHANCE YOUR OTT TV</a>
         </div>
       </section
-      >
-      <section class="android rounded-link">
+      ><section class="android rounded-link">
         <div class="android-text">
           <h3>DEPLOY BEST IN CLASS TV SERVICE</h3>
           <p><em>Comigo's</em> Android-based STB (HW&MW)</p>
@@ -134,9 +136,11 @@
       </section>
       <section class="experience">
         <img src="assets/other/screen_whos_on.jpg" alt="who/'s on" width="500" height="354">
-        <h3>YOUR CONTENT, COMIGO'S UNIQUE EXPERIENCE</h3>
-        <p>Intelligence-based contextual WatchApp&#8482; Applications.</p>
-        <a href="#" class="round-btn">LEARN MORE</a>
+        <div class="experience-text">
+          <h3>YOUR CONTENT, COMIGO'S UNIQUE EXPERIENCE</h3>
+          <p>Intelligence-based contextual WatchApp&#8482; Applications.</p>
+          <a href="#" class="round-btn">LEARN MORE</a>
+        </div>
       </section>
       <footer class="schedules">
         <h3>LEARN MORE ABOUT COMIGO</h3>
@@ -148,10 +152,10 @@
           <img src="assets/other/comigo-schedule-meeting.png" alt="schedule a meeting picture" width="574" height="293">
         </a>
         <ul class="social-networks list-reset">
-          <li><a href="#">FACEBOOK</a></li>
-          <li><a href="#">TWITTER</a></li>
-          <li><a href="#">LINKED IN</a></li>
-          <li><a href="#">YOUTUBE</a></li>
+          <li><a href="#"><span class="icon-facebook"></span></a></li>
+          <li><a href="#"><span class="icon-twitter"></span></a></li>
+          <li><a href="#"><span class="icon-linkedin2"></span></a></li>
+          <li><a href="#"><span class="icon-youtube"></span></a></li>
         </ul>
         <a href="#">
           <h3>SCHEDULE A DEMO</h3>
@@ -232,10 +236,10 @@
         <a href="#">Privacy Policy</a>
         <address class="author"><p>Developed By: <a href="#">FATLADY</a></p></address>
         <ul class="social-networks list-reset">
-          <li><a href="#">FACEBOOK</a></li>
-          <li><a href="#">TWITTER</a></li>
-          <li><a href="#">LINKED IN</a></li>
-          <li><a href="#">YOUTUBE</a></li>
+          <li><a href="#"><span class="icon-facebook"></span></a></li>
+          <li><a href="#"><span class="icon-twitter"></span></a></li>
+          <li><a href="#"><span class="icon-linkedin2"></span></a></li>
+          <li><a href="#"><span class="icon-youtube"></span></a></li>
         </ul>
       </div>
     </footer>
